...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/create_game_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ems="35"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@id/create_game_name"
...
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                app:layout_constraintBaseline_toBaselineOf="@id/number_of_players"
                app:layout_constraintLeft_toRightOf="@id/number_of_players">

                <EditText
                    android:id="@+id/min_num_player_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="35"
                    android:inputType="number"
                    android:maxLength="3"
                    app:layout_constraintHorizontal_weight="1" />

                <EditText
                    android:id="@+id/max_num_player_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="35"
                    android:inputType="number"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/difficulty_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/difficulties_array"
                app:layout_constraintBaseline_toBaselineOf="@id/difficulty"
                app:layout_constraintLeft_toRightOf="@+id/difficulty"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universe"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/universes_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:entries="@array/universes_array"
                app:layout_constraintBaseline_toBaselineOf="@id/universe"
                app:layout_constraintLeft_toRightOf="@+id/universe" />


            <EditText
                android:id="@+id/universe_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:maxLength="30"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent">

                <RadioButton
                    android:id="@+id/oneshot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onOneShotOrCampaignSelected"
                    android:text="@string/oneshot" />

                <RadioButton
                    android:id="@+id/campaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onOneShotOrCampaignSelected"
                    android:text="@string/campaign" />
            </RadioGroup>

...
                    android:layout_marginBottom="8dp"
                    android:text="@string/num_sessions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/radio" />

                <EditText
                    android:id="@+id/num_session_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    app:layout_constraintBaseline_toBaselineOf="@id/num_sessions"
                    app:layout_constraintLeft_toRightOf="@id/num_sessions" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_length"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/session_length_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:entries="@array/session_length_array"
                app:layout_constraintBaseline_toBaselineOf="@id/session_length"
                app:layout_constraintLeft_toRightOf="@id/session_length" />
...
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/description"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/description_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:inputType="textMultiLine"
                android:maxLength="1200"
                app:layout_constraintTop_toBottomOf="@id/description" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="submitGame"
            android:text="@string/submit_button"
...
