...
                    android:id="@+id/LinearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <fragment
                        android:id="@+id/create_game_form"
                        android:name="ch.epfl.sweng.erpa.CreateGameFormFragment"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>
...
