...
        android:layout_width="384dp"
        android:layout_height="567dp"
        android:gravity="center"
        android:visibility="visible">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="text|textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Username" />

...
