...
        <Button
            android:id="@+id/launch_login_button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="Login"
            app:layout_constraintBottom_toTopOf="@+id/launch_storage_provider_greet"
            app:layout_constraintEnd_toStartOf="@+id/launch_signup_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_my_account_button" />

        <Button
            android:id="@+id/launch_signup_button"
...
